Fix spacing.

--- a/src/components/sections/Skills.scss
+++ b/src/components/sections/Skills.scss
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   display: flex;
   gap: 40px;
-  padding: 14em 0 3em 0;
+  padding: 10em 0 3em 0;
   flex-direction: column;
   align-items: center;
   background-color: black;
